--- a/excel2sheets/excel2sheets.csproj
+++ b/excel2sheets/excel2sheets.csproj
@@ -9,8 +9,8 @@
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.11.3" />
     <PackageReference Include="Dropbox.Api" Version="5.1.0" />
     <PackageReference Include="EPPlus" Version="5.4.0" />
+    <PackageReference Include="ExcelLibrary" Version="1.2011.7.31" />
     <PackageReference Include="Google.Apis.Sheets.v4" Version="1.49.0.2105" />
-    <PackageReference Include="Nemiro.OAuth.LoginForms" Version="1.7.0" />
   </ItemGroup>
 
   <ItemGroup>
